# TaskBolt-Computer

./: .gitignore  .vercelignore  README.md  create-shortcuts.vbs  generate-icons.cjs  index.html  package-lock.json  package.json  start-vite.js  taskbolt_bridge.py  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
agent-engine/: requirements.txt  taskbolt_agent.py
agent-engine/skills/: __init__.py  file_reader.py  system_health.py  terminal_exec.py
engine/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.gpu-amd.yml  docker-compose.gpu-nvidia.yml  docker-compose.yml  start-macos.sh  taskbolt_engine.py  taskbolt_requirements.txt
engine/companion/: pairing.py
engine/core/: auth.py  constants.py  database.py  session_manager.py
engine/odysseus-core/: _check.py  _check_prompt.py  agentic_loop.py  main.py  requirements.txt  setup.py  test_composio_endpoints.py  test_engine.py  test_tool_structure.py
engine/routes/: admin_wipe_routes.py  api_token_routes.py  backup_routes.py  calendar_routes.py  chat_helpers.py  codex_routes.py  compare_routes.py  contacts_routes.py  cookbook_helpers.py  cookbook_routes.py  document_routes.py  email_helpers.py  email_pollers.py  email_routes.py  (+21 more)
hermes-engine/: taskbolt_bridge.py
saas/: README.md  package-lock.json  package.json  schema.sql  vercel.json
src/: App.css  App.tsx  LogoSvg.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  engine.rs  lib.rs  main.rs
(+163 files in other folders)
