[package]
name = "taskbolt-computer"
version = "0.1.0"
description = "TaskBolt — AI that sets up your computer for you"
authors = ["TaskBolt"]
edition = "2024"

[lib]
name = "taskbolt_computer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
